# imagecube

./: MANIFEST.in  README.rst  index.html  params.json  setup.cfg  setup.py
data/: I1_n5128_mosaic.fits
docs/: conf.py  index.rst
imagecube/: .directory  imagecube.py
imagecube/tests/: .directory  test_imagecube.py
licenses/: LICENSE.rst
scripts/: imagecube
