[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = imagecube
description = Image processing of multiwavelength imaging
long_description = This is a package for doing X that relies on astropy
author = Sophia Lianou, Pauline Barmby and Jeff Taylor
author_email = sophia.thl@gmail.com, pauline.barmby@gmail.com, jeff.c.taylor@gmail.com
license = BSD
url = http://github.com/sophiathl/imagecube
edit_on_github = True
github_project = imagecube
